# the-chip-8

./: CMakeLists.txt  INSTALL.md  README.txt  chip8.c  chip8.h  main.c  opcode.c  opcode.h
old/: chip8.c  chip8.h  main.c
